@@ -11,7 +11,6 @@
         <maven.compiler.release>21</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <pdfbox.version>2.0.36</pdfbox.version>
-        <imageio.heif.version>1.1.0</imageio.heif.version>
         <twelvemonkeys.version>3.13.1</twelvemonkeys.version>
         <junit.jupiter.version>6.0.3</junit.jupiter.version>
     </properties>
@@ -21,11 +20,6 @@
             <groupId>org.apache.pdfbox</groupId>
             <artifactId>pdfbox</artifactId>
             <version>${pdfbox.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.gotson.nightmonkeys</groupId>
-            <artifactId>imageio-heif</artifactId>
-            <version>${imageio.heif.version}</version>
         </dependency>
         <dependency>
             <groupId>com.twelvemonkeys.imageio</groupId>
@@ -55,7 +49,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.5</version>
                 <configuration>
-                    <argLine>--enable-preview --enable-native-access=ALL-UNNAMED -Djava.awt.headless=true</argLine>
+                    <argLine>-Djava.awt.headless=true</argLine>
                 </configuration>
             </plugin>
         </plugins>
